refactor: response using pb
